--- a/static/chat.css
+++ b/static/chat.css
@@ -41,12 +41,6 @@ header {
 
 .logo-container {
   width: 250px;
-  /* height: 120px;
-  
-  background-color: #ffffff;
-  border-radius: 15px;
-  overflow: hidden;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -63,7 +57,6 @@ header {
 .topnav {
   background-color: #333;
   overflow: hidden;
-  width: 100%;
 }
 
 /* Style the links inside the navigation bar */
@@ -73,7 +66,7 @@ header {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-  padding: 320px;
+  padding: 300px;
 }
 
 /* Change the color of links on hover */
@@ -115,17 +108,17 @@ header h1 {
   flex-direction: column;
 }
 
-/* .message {
+.message {
   max-width: 80%;
   margin-bottom: 15px;
   padding: 12px 15px;
-  border-radius: 18px;
-  font-size: 1rem; /* Slightly increased for better readability 
+  border-radius: 5px;
+  font-size: 1rem; /* Slightly increased for better readability */
   line-height: 1.5;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-} */
+}
 
-.message {
+/* .message {
   max-width: 80%;
   padding: 20px;
   margin-right: 20px;
@@ -147,7 +140,7 @@ header h1 {
   border-bottom-right-radius: 25px 20px;
   transform: translate(0, -4px);
   box-shadow: -3px 3px 5px #c1b9c8;
-}
+} */
 
 .user {
   align-self: flex-end;
